fix: fixing sonar (#27)
* fix: reliability and security hotspots

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* fix: typo in raspberry sensehat package declaration

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* fix: final hotspots

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* fix: trying to resolve zero coverage

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* fix: trying to resolve zero coverage again

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* fix: broken build

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* fix: wrong sonar path

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* test: started to increase test coverage

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* test: added wire.math.multiport tests

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* fix: broken build

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* ci(workflows): switch to shared force merge workflow (#28)

* ci(workflows): fix force merge shared workflow secrets inheriting (#29)

* adding tests

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

* fix: improving coverage

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>

---------

Signed-off-by: SimoneFiorani <simone.fiorani@abinsula.com>
Co-authored-by: Mattia Dal Ben <mattdibi@users.noreply.github.com>